--- a/css/addition.css
+++ b/css/addition.css
@@ -1,3 +1,8 @@
+/* all */
+#about, #feature, #video, #menu, #team, #gallery, #contact{
+	padding: 80px 0 80px;
+}
+
 /* replenish files */
 .lang-btn{
 	width: 25%;
@@ -18,6 +23,24 @@
 
 #navi a{
 	color: white;
+}
+
+/* story */
+.flexslider{
+	margin-bottom: 0;
+}
+
+.flex-control-nav{
+	bottom: 30px;
+}
+
+/* video */
+#video{
+	color: #FFFFFF;
+}
+
+#video .overlay{
+	background: rgba(3,3,3,0.2);
 }
 
 #feature .feature-icon {
