--- a/css/style.css
+++ b/css/style.css
@@ -586,7 +586,7 @@ a:focus {
 
 /* Contact section  */
 #contact {
-  background: url('../images/contact-bg.jpg') 50% 0 repeat-y fixed;
+  /* background: url('../images/contact-bg.jpg') 50% 0 repeat-y fixed; */
   -webkit-background-size: cover;
   background-size: cover;
   background-position: center center;
