--- a/css/addition.css
+++ b/css/addition.css
@@ -72,6 +72,13 @@
 }
 
 /* story */
+#intro p{
+	text-align: justify;
+	/* font-size: 15px; */
+	font-weight: 400;
+	word-spacing: -0.1em;
+}
+
 .flexslider{
 	margin-bottom: 0;
 }
@@ -81,6 +88,7 @@
 }
 
 /* about */
+
 /* #about{
 	padding: 4vw 0 4vw;
 } */
