contact wechat，modify the sequence of lang

--- a/css/addition.css
+++ b/css/addition.css
@@ -197,6 +197,10 @@ footer {
 	color: #FFFFFF;
 }
 
+.location-map{
+	padding: 20px 0 20px;
+}
+
 
 /* response */
 /* .navbar-header,.navbar-collapse,.navbar-nav{
